- stop putting element "type" in output

0.05 2019-12-31
- make XML::LibXML be only suggested, not required

0.04 Fri 19 Oct 03:45:53 BST 2018
 - make flatten work right on single rule with +

0.03 Mon 24 Sep 06:03:10 BST 2018
 - attributes hash not array

0.02 Mon 24 Sep 05:46:54 BST 2018
 - autovivify children and attributes so no empty arrays

0.01 Sun 23 Sep 05:25:42 BST 2018
 - First version, released on an unsuspecting world.