@@ -1,4 +1,5 @@
 - stop putting element "type" in output
+- make_parser can take a Pegex::Grammar object
 
 0.05 2019-12-31
 - make XML::LibXML be only suggested, not required
